# Predictions-Market

./: .env.example  .gitignore  API_REFERENCE.md  CLAUDE.md  architecture.html  main.py  pyproject.toml  run_bot.bat  start_dashboard.bat
.github/workflows/: daily_run.yml
agents/: data_ingester.py  execution_agent.py  market_analyst.py  news_intel_agent.py  orchestrator.py  risk_manager.py  signal_agent.py  smart_money_agent.py  strategy_agent.py
docs/: index.html
docs/superpowers/plans/: 2026-05-18-strategy-agent.md  2026-05-24-signal-quality-fix.md
docs/superpowers/specs/: 2026-05-18-strategy-agent-design.md  2026-05-24-signal-quality-fix-design.md
scripts/: analyze.py  backtest.py  dashboard.py  dry_run.py  generate_static_dashboard.py  index.py  reminder.py  reset_zombies.py  view_cron_log.ps1
src/analysis/: base_rates.py  calibration.py  kelly.py  llm_forecaster.py  microstructure.py  smart_money.py
src/common/: config.py  logger.py  notifier.py  prompts.py  schemas.py
src/indexers/kalshi/: __init__.py  client.py
src/indexers/manifold/: __init__.py  client.py
src/indexers/metaculus/: __init__.py  client.py
src/indexers/polymarket/: __init__.py  gamma.py
tests/: test_execution_agent.py  test_execution_protocol.py  test_kelly_sizing.py  test_risk_manager.py  test_signal_calibration.py  test_strategy_agent.py
